[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dabbleverse"
version = "0.1.0"
description = "Download videos from multiple YouTube channels and build a combined local playlist."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-api-python-client>=2.169.0",
  "google-auth-oauthlib>=1.2.0",
  "yt-dlp>=2025.3.31",
]

[project.scripts]
dabbleverse = "dabbleverse.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
